BE: Debugging and Testing of comment.
